--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
   <body>
 
     <div class="container">
+
+        <div class="hamburguer">
+          <div class="line" id="line1"></div>
+          <div class="line" id="line2"></div>
+          <div class="line" id="line3"></div>
+          <span>fechar</span>
+        </div>  
+
         <header>
             <div class="img-wrapper">
                 <img src="imagens/bg.jpg" alt="">
@@ -23,9 +31,25 @@
                 <button>Saiba mais</button>
             </div>
         </header>
+
+        <div class="sidebar">
+          <nav>
+            <ul class="menu">
+              <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
+              <li class="menu-item"><a href="#" class="menu-link">Conhecimento</a></li>
+              <li class="menu-item"><a href="#" class="menu-link">Projetos</a></li>
+              <li class="menu-item"><a href="#" class="menu-link">Contato</a></li>
+              <li class="menu-item"><a href="#" class="menu-link">Orçamento</a></li>
+            </ul>
+          </nav>
+          <div class="social-media">
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-github-alt"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+          </div>
+        </div>
     </div>
+   </body>
 
- 
-
-  </body>
+   <script src="script.js"></script>
 </html>
