--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <h2>ToDo List</h2>
                 <h3>Javascript</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate ducimus vero maxime amet magnam doloribus eos consequatur expedita architecto hic?</p>
-                <button>Saiba Mais</button>
+                <button class="btn">Saiba Mais</button>
               </div>
             </div>
             <div class="card">
@@ -139,7 +139,7 @@
                 <h2>Maratona</h2>
                 <h3>HTML, CSS</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, vero aliquam? Pariatur libero voluptas ipsam ullam consectetur ab facilis cumque.</p>
-                <button>Saiba Mais</button>
+                <button class="btn">Saiba Mais</button>
               </div>
             </div>
             <div class="card">
@@ -150,13 +150,36 @@
                 <h2>Casa Bela</h2>
                 <h3>HTML</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est pariatur soluta doloremque tempore nisi placeat, eveniet voluptate recusandae. Eius, sapiente?</p>
-                <button>Saiba Mais</button>
+                <button class="btn">Saiba Mais</button>
               </div>
             </div>
           </div>
 
         </section>
 
+        <section class="sessao-contato">
+          <div class="contato-wrapper">
+            <div class="contato-left"></div>
+            <div class="contato-right">
+              <h1>Contato</h1>
+              <form>
+                <div class="input-group">
+                  <input type="text" class="field" id="nome">
+                  <label for="nome" class="field-label">Nome</label>
+                </div>
+                <div class="input-group">
+                  <input type="text" class="field" id="email">
+                  <label for="email" class="field-label">E-mail</label>
+                </div>
+                <div class="input-group">
+                  <textarea class="field" id="mensagem"></textarea>
+                  <label for="mensagem" class="field-label">Mensagem</label>
+                </div>
+                <button type="submit" class="btn btn-submit">Enviar</button>
+              </form>
+            </div>
+          </div>
+        </section>
     </div>
    </body>
 
