:package: rodapé e navegação

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <span>fechar</span>
         </div>  
 
-        <header>
+        <header id="home">
             <div class="img-wrapper">
                 <img src="imagens/bg.jpg" alt="">
             </div>
@@ -36,10 +36,10 @@
           <nav>
             <ul class="menu">
               <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
-              <li class="menu-item"><a href="#" class="menu-link">Conhecimento</a></li>
-              <li class="menu-item"><a href="#" class="menu-link">Projetos</a></li>
-              <li class="menu-item"><a href="#" class="menu-link">Contato</a></li>
-              <li class="menu-item"><a href="#" class="menu-link">Orçamento</a></li>
+              <li class="menu-item"><a href="#conhecimentos" class="menu-link">Conhecimento</a></li>
+              <li class="menu-item"><a href="#projetos" class="menu-link">Projetos</a></li>
+              <li class="menu-item"><a href="#contato" class="menu-link">Contato</a></li>
+              <li class="menu-item"><a href="#orcamento" class="menu-link">Orçamento</a></li>
             </ul>
           </nav>
           <div class="social-media">
@@ -49,7 +49,7 @@
           </div>
         </aside>
 
-        <section class="sessao-conhecimentos">
+        <section class="sessao-conhecimentos" id="conhecimentos">
           <div class="sessao-header">
             <h1>Conhecimentos</h1>
           </div>
@@ -115,7 +115,7 @@
           </div>
         </section>
 
-        <div class="sessao-projetos">
+        <div class="sessao-projetos" id="projetos">
           <div class="sessao-header">
             <h1>Projetos</h1>
           </div>
@@ -157,7 +157,7 @@
 
         </section>
 
-        <section class="sessao-contato">
+        <section class="sessao-contato" id="contato">
           <div class="contato-wrapper">
             <div class="contato-left"></div>
             <div class="contato-right">
@@ -181,7 +181,7 @@
           </div>
         </section>
 
-        <section class="sessao-orcamento">
+        <section class="sessao-orcamento" id="orcamento">
           <div class="orcamento-wrapper">
             <h1>Faça um orçamento</h1>
             <form>
@@ -206,6 +206,24 @@
             </form>
           </div>
         </section>
+
+        <footer>
+          <div class="footer-content">
+            <p>
+              Copyright &copy; 2020, ETECIA DS - Todos os diretos reservados
+            </p>
+            <div class="social-list">
+              <ul>
+                <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                <li><a href=""><i class="fab fa-twitter"></i></a></li>
+              </ul>
+            </div>
+          </div>
+        </footer>
+        <a href="#home" id="link-topo">
+          <i class="fas fa-arrow-up"></i>
+        </a>
     </div>
    </body>
 
