--- a/index.html
+++ b/index.html
@@ -201,7 +201,8 @@
                 </div>
               </div>
               <label for="prazo">Prazo</label>
-              <input type="range" name="prazo" id="prazo">
+              <input type="range" name="prazo" id="prazo" min="1" max="10">
+              <label id="preco">R$ 0,00</label>
               <button class="btn btn-orcamento" type="submit">Enviar</button>
             </form>
           </div>
